# QtProjects

./: .gitignore  README.md  test.qs
QtEditor/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
QtRunner/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  scriptpainter.cpp  scriptpainter.h
